Fix for slightly too large header height
It was 49px before but 54px now. No.

--- a/default.css
+++ b/default.css
@@ -12,6 +12,8 @@ body {
 }
 
 header {
+    height: 49px;
+    overflow: hidden;
     -ms-user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
